--- a/fre.ipynb
+++ b/fre.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "77da3f37",
    "metadata": {},
    "outputs": [
@@ -25,48 +25,76 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: openpyxl in c:\\users\\duduc\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (3.1.5)\n",
-      "Requirement already satisfied: selenium in c:\\users\\duduc\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (4.31.0)\n",
-      "Requirement already satisfied: et-xmlfile in c:\\users\\duduc\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from openpyxl) (2.0.0)\n",
-      "Requirement already satisfied: urllib3<3,>=1.26 in c:\\users\\duduc\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from urllib3[socks]<3,>=1.26->selenium) (2.4.0)\n",
-      "Requirement already satisfied: trio~=0.17 in c:\\users\\duduc\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from selenium) (0.30.0)\n",
-      "Requirement already satisfied: trio-websocket~=0.9 in c:\\users\\duduc\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from selenium) (0.12.2)\n",
-      "Requirement already satisfied: certifi>=2021.10.8 in c:\\users\\duduc\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from selenium) (2025.1.31)\n",
-      "Requirement already satisfied: typing_extensions~=4.9 in c:\\users\\duduc\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from selenium) (4.13.2)\n",
-      "Requirement already satisfied: websocket-client~=1.8 in c:\\users\\duduc\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from selenium) (1.8.0)\n",
-      "Requirement already satisfied: attrs>=23.2.0 in c:\\users\\duduc\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from trio~=0.17->selenium) (25.3.0)\n",
-      "Requirement already satisfied: sortedcontainers in c:\\users\\duduc\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from trio~=0.17->selenium) (2.4.0)\n",
-      "Requirement already satisfied: idna in c:\\users\\duduc\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from trio~=0.17->selenium) (3.10)\n",
-      "Requirement already satisfied: outcome in c:\\users\\duduc\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from trio~=0.17->selenium) (1.3.0.post0)\n",
-      "Requirement already satisfied: sniffio>=1.3.0 in c:\\users\\duduc\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from trio~=0.17->selenium) (1.3.1)\n",
-      "Requirement already satisfied: cffi>=1.14 in c:\\users\\duduc\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from trio~=0.17->selenium) (1.17.1)\n",
-      "Requirement already satisfied: wsproto>=0.14 in c:\\users\\duduc\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from trio-websocket~=0.9->selenium) (1.2.0)\n",
-      "Requirement already satisfied: pysocks!=1.5.7,<2.0,>=1.5.6 in c:\\users\\duduc\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from urllib3[socks]<3,>=1.26->selenium) (1.7.1)\n",
-      "Requirement already satisfied: pycparser in c:\\users\\duduc\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from cffi>=1.14->trio~=0.17->selenium) (2.22)\n",
-      "Requirement already satisfied: h11<1,>=0.9.0 in c:\\users\\duduc\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from wsproto>=0.14->trio-websocket~=0.9->selenium) (0.16.0)\n",
+      "Requirement already satisfied: openpyxl in d:\\ana_python\\lib\\site-packages (3.1.5)\n",
+      "Collecting selenium\n",
+      "  Downloading selenium-4.32.0-py3-none-any.whl.metadata (7.5 kB)\n",
+      "Requirement already satisfied: et-xmlfile in d:\\ana_python\\lib\\site-packages (from openpyxl) (1.1.0)\n",
+      "Requirement already satisfied: urllib3<3,>=1.26 in d:\\ana_python\\lib\\site-packages (from urllib3[socks]<3,>=1.26->selenium) (2.2.3)\n",
+      "Collecting trio~=0.17 (from selenium)\n",
+      "  Downloading trio-0.30.0-py3-none-any.whl.metadata (8.5 kB)\n",
+      "Collecting trio-websocket~=0.9 (from selenium)\n",
+      "  Downloading trio_websocket-0.12.2-py3-none-any.whl.metadata (5.1 kB)\n",
+      "Requirement already satisfied: certifi>=2021.10.8 in d:\\ana_python\\lib\\site-packages (from selenium) (2024.8.30)\n",
+      "Requirement already satisfied: typing_extensions~=4.9 in d:\\ana_python\\lib\\site-packages (from selenium) (4.11.0)\n",
+      "Requirement already satisfied: websocket-client~=1.8 in d:\\ana_python\\lib\\site-packages (from selenium) (1.8.0)\n",
+      "Collecting attrs>=23.2.0 (from trio~=0.17->selenium)\n",
+      "  Downloading attrs-25.3.0-py3-none-any.whl.metadata (10 kB)\n",
+      "Requirement already satisfied: sortedcontainers in d:\\ana_python\\lib\\site-packages (from trio~=0.17->selenium) (2.4.0)\n",
+      "Requirement already satisfied: idna in d:\\ana_python\\lib\\site-packages (from trio~=0.17->selenium) (3.7)\n",
+      "Collecting outcome (from trio~=0.17->selenium)\n",
+      "  Downloading outcome-1.3.0.post0-py2.py3-none-any.whl.metadata (2.6 kB)\n",
+      "Requirement already satisfied: sniffio>=1.3.0 in d:\\ana_python\\lib\\site-packages (from trio~=0.17->selenium) (1.3.0)\n",
+      "Requirement already satisfied: cffi>=1.14 in d:\\ana_python\\lib\\site-packages (from trio~=0.17->selenium) (1.17.1)\n",
+      "Collecting wsproto>=0.14 (from trio-websocket~=0.9->selenium)\n",
+      "  Downloading wsproto-1.2.0-py3-none-any.whl.metadata (5.6 kB)\n",
+      "Requirement already satisfied: pysocks!=1.5.7,<2.0,>=1.5.6 in d:\\ana_python\\lib\\site-packages (from urllib3[socks]<3,>=1.26->selenium) (1.7.1)\n",
+      "Requirement already satisfied: pycparser in d:\\ana_python\\lib\\site-packages (from cffi>=1.14->trio~=0.17->selenium) (2.21)\n",
+      "Requirement already satisfied: h11<1,>=0.9.0 in d:\\ana_python\\lib\\site-packages (from wsproto>=0.14->trio-websocket~=0.9->selenium) (0.14.0)\n",
+      "Downloading selenium-4.32.0-py3-none-any.whl (9.4 MB)\n",
+      "   ---------------------------------------- 0.0/9.4 MB ? eta -:--:--\n",
+      "   ------ --------------------------------- 1.6/9.4 MB 7.6 MB/s eta 0:00:02\n",
+      "   ---------------- ----------------------- 3.9/9.4 MB 9.8 MB/s eta 0:00:01\n",
+      "   -------------------------- ------------- 6.3/9.4 MB 10.4 MB/s eta 0:00:01\n",
+      "   ------------------------------------ --- 8.7/9.4 MB 10.7 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 9.4/9.4 MB 10.2 MB/s eta 0:00:00\n",
+      "Downloading trio-0.30.0-py3-none-any.whl (499 kB)\n",
+      "Downloading trio_websocket-0.12.2-py3-none-any.whl (21 kB)\n",
+      "Downloading attrs-25.3.0-py3-none-any.whl (63 kB)\n",
+      "Downloading outcome-1.3.0.post0-py2.py3-none-any.whl (10 kB)\n",
+      "Downloading wsproto-1.2.0-py3-none-any.whl (24 kB)\n",
+      "Installing collected packages: wsproto, attrs, outcome, trio, trio-websocket, selenium\n",
+      "  Attempting uninstall: attrs\n",
+      "    Found existing installation: attrs 23.1.0\n",
+      "    Uninstalling attrs-23.1.0:\n",
+      "      Successfully uninstalled attrs-23.1.0\n",
+      "Successfully installed attrs-25.3.0 outcome-1.3.0.post0 selenium-4.32.0 trio-0.30.0 trio-websocket-0.12.2 wsproto-1.2.0\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 25.0.1 -> 25.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
    "source": [
-    "%pip install openpyxl selenium"
+    "%pip install openpyxl selenium\n",
+    "%pip install "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a9ddb644",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'openpyxl'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mopenpyxl\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mopenpyxl\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m workbook\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mopenpyxl\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_workbook\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'openpyxl'"
+     ]
+    }
+   ],
    "source": [
     "import openpyxl\n",
     "from openpyxl import workbook\n",
