--- a/fre.ipynb
+++ b/fre.ipynb
@@ -20,61 +20,10 @@
    "execution_count": null,
    "id": "77da3f37",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: openpyxl in d:\\ana_python\\lib\\site-packages (3.1.5)\n",
-      "Collecting selenium\n",
-      "  Downloading selenium-4.32.0-py3-none-any.whl.metadata (7.5 kB)\n",
-      "Requirement already satisfied: et-xmlfile in d:\\ana_python\\lib\\site-packages (from openpyxl) (1.1.0)\n",
-      "Requirement already satisfied: urllib3<3,>=1.26 in d:\\ana_python\\lib\\site-packages (from urllib3[socks]<3,>=1.26->selenium) (2.2.3)\n",
-      "Collecting trio~=0.17 (from selenium)\n",
-      "  Downloading trio-0.30.0-py3-none-any.whl.metadata (8.5 kB)\n",
-      "Collecting trio-websocket~=0.9 (from selenium)\n",
-      "  Downloading trio_websocket-0.12.2-py3-none-any.whl.metadata (5.1 kB)\n",
-      "Requirement already satisfied: certifi>=2021.10.8 in d:\\ana_python\\lib\\site-packages (from selenium) (2024.8.30)\n",
-      "Requirement already satisfied: typing_extensions~=4.9 in d:\\ana_python\\lib\\site-packages (from selenium) (4.11.0)\n",
-      "Requirement already satisfied: websocket-client~=1.8 in d:\\ana_python\\lib\\site-packages (from selenium) (1.8.0)\n",
-      "Collecting attrs>=23.2.0 (from trio~=0.17->selenium)\n",
-      "  Downloading attrs-25.3.0-py3-none-any.whl.metadata (10 kB)\n",
-      "Requirement already satisfied: sortedcontainers in d:\\ana_python\\lib\\site-packages (from trio~=0.17->selenium) (2.4.0)\n",
-      "Requirement already satisfied: idna in d:\\ana_python\\lib\\site-packages (from trio~=0.17->selenium) (3.7)\n",
-      "Collecting outcome (from trio~=0.17->selenium)\n",
-      "  Downloading outcome-1.3.0.post0-py2.py3-none-any.whl.metadata (2.6 kB)\n",
-      "Requirement already satisfied: sniffio>=1.3.0 in d:\\ana_python\\lib\\site-packages (from trio~=0.17->selenium) (1.3.0)\n",
-      "Requirement already satisfied: cffi>=1.14 in d:\\ana_python\\lib\\site-packages (from trio~=0.17->selenium) (1.17.1)\n",
-      "Collecting wsproto>=0.14 (from trio-websocket~=0.9->selenium)\n",
-      "  Downloading wsproto-1.2.0-py3-none-any.whl.metadata (5.6 kB)\n",
-      "Requirement already satisfied: pysocks!=1.5.7,<2.0,>=1.5.6 in d:\\ana_python\\lib\\site-packages (from urllib3[socks]<3,>=1.26->selenium) (1.7.1)\n",
-      "Requirement already satisfied: pycparser in d:\\ana_python\\lib\\site-packages (from cffi>=1.14->trio~=0.17->selenium) (2.21)\n",
-      "Requirement already satisfied: h11<1,>=0.9.0 in d:\\ana_python\\lib\\site-packages (from wsproto>=0.14->trio-websocket~=0.9->selenium) (0.14.0)\n",
-      "Downloading selenium-4.32.0-py3-none-any.whl (9.4 MB)\n",
-      "   ---------------------------------------- 0.0/9.4 MB ? eta -:--:--\n",
-      "   ------ --------------------------------- 1.6/9.4 MB 7.6 MB/s eta 0:00:02\n",
-      "   ---------------- ----------------------- 3.9/9.4 MB 9.8 MB/s eta 0:00:01\n",
-      "   -------------------------- ------------- 6.3/9.4 MB 10.4 MB/s eta 0:00:01\n",
-      "   ------------------------------------ --- 8.7/9.4 MB 10.7 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 9.4/9.4 MB 10.2 MB/s eta 0:00:00\n",
-      "Downloading trio-0.30.0-py3-none-any.whl (499 kB)\n",
-      "Downloading trio_websocket-0.12.2-py3-none-any.whl (21 kB)\n",
-      "Downloading attrs-25.3.0-py3-none-any.whl (63 kB)\n",
-      "Downloading outcome-1.3.0.post0-py2.py3-none-any.whl (10 kB)\n",
-      "Downloading wsproto-1.2.0-py3-none-any.whl (24 kB)\n",
-      "Installing collected packages: wsproto, attrs, outcome, trio, trio-websocket, selenium\n",
-      "  Attempting uninstall: attrs\n",
-      "    Found existing installation: attrs 23.1.0\n",
-      "    Uninstalling attrs-23.1.0:\n",
-      "      Successfully uninstalled attrs-23.1.0\n",
-      "Successfully installed attrs-25.3.0 outcome-1.3.0.post0 selenium-4.32.0 trio-0.30.0 trio-websocket-0.12.2 wsproto-1.2.0\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install openpyxl selenium\n",
-    "%pip install "
+    "%pip install selenium"
    ]
   },
   {
@@ -85,13 +34,13 @@
    "outputs": [
     {
      "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'openpyxl'",
+     "evalue": "No module named 'selenium'",
      "output_type": "error",
      "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mopenpyxl\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mopenpyxl\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m workbook\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mopenpyxl\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_workbook\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'openpyxl'"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mopenpyxl\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m workbook\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mopenpyxl\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load_workbook\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mselenium\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m webdriver\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mselenium\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwebdriver\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcommon\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mby\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m By\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtime\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m sleep\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'selenium'"
      ]
     }
    ],
@@ -184,7 +133,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -198,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
